--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="row">
                 <nav class="navbar navbar-expand-lg ">
-                    <div class="container-fluid">
+                    <div class="container-fluid p-0">
                         <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" class="logo"></a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
                                     <a class="nav-link" href="#">Xbox</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Support</a>
+                                    <a class="nav-link pr-0" href="#">Support</a>
                                 </li>
                             </ul>
                         </div>
@@ -63,7 +63,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">Search <i class="fas fa-search" style="transform: scaleX(-1);"></i></a>
+                                    <a class="nav-link" href="#">Search <i class="fas fa-search pr-2" style="transform: scaleX(-1);font-size: 16px;" aria-hidden="true"></i></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">Cart <i class="fas fa-shopping-cart"></i></a>
@@ -72,7 +72,7 @@
                                     <a class="nav-link" href="#">Sign in</a>
                                 </li>
 
-                                <li class="nav-item">
+                                <li class="nav-item login">
                                     <a class="nav-link" href="#"><i class="fas fa-user-plus"></i></a>
                                 </li>
                             </ul>
